<resources>
    <string name="app_name">Android Task- Youtube</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="save">Save</string>
    <string name="subscribe">Subscribe</string>
    <string name="comments">Comments</string>
    <string name="editing">Editing</string>
    <string name="mantras">Mantras</string>
    <string name="new_to_you">New to you</string>
    <string name="youtube">YouTube</string>
    <string name="explore">Explore</string>
    <string name="all">All</string>
    <string name="ai">AI</string>
    <string name="android_studio">Android Studio</string>
    <string name="computer_science">Computer Science</string>
    <string name="stocks">Stocks</string>
    <string name="podcast">Podcast</string>
    <string name="music">Music</string>

</resources>