<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.video.FragmentVideo">

    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
        android:id="@+id/youtube_player_view"
        android:name="com.google.android.youtube.player.YouTubePlayerFragment"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:tag="customYoutubePlayerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/video_data_box"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/youtube_player_view"
        tools:context=".UI.Fragments.VideoDataFragment">


        <TextView
            android:id="@+id/video_title_in_video_screen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/description_dropdown"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Hello everybody" />

        <ImageView
            android:id="@+id/description_dropdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/ic_dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/video_views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/video_title_in_video_screen"
            tools:text="some views " />


        <TextView
            android:id="@+id/video_published_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/video_views"
            app:layout_constraintTop_toBottomOf="@id/video_title_in_video_screen"
            tools:text=". some date" />

        <LinearLayout
            android:id="@+id/llVideoUtils"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/video_published_date">

            <LinearLayout
                android:id="@+id/like_video"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/like_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_like_video"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/like_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/like" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dislike_video"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/dislike_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_dislike_video"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/dislike_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="Dislike" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/share_video"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/share_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_share_video"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/share_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:textColor="@color/black"
                    tools:text="Share" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/download_video"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/download_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_download_video"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/download_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/download"
                    android:textColor="@color/black"
                    tools:text="Dowload" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/save_video"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/save_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_save_to_playlist"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/save_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textColor="@color/black"
                    tools:text="Save" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/divider_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/gray1"
            app:layout_constraintTop_toBottomOf="@id/llVideoUtils" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvChannel_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_1">

            <ImageView
                android:id="@+id/channel_logo_video_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                tools:src="@drawable/youtubechannel" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/channel_name_video_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:scrollHorizontally="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cvChannel_logo"
            app:layout_constraintTop_toTopOf="@id/cvChannel_logo"
            tools:text="Channel Name" />

        <TextView
            android:id="@+id/channel_subscribers_video_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cvChannel_logo"
            app:layout_constraintTop_toBottomOf="@id/channel_name_video_data"
            tools:text="Subscribers count" />

        <TextView
            android:id="@+id/subscribe_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:text="@string/subscribe"
            android:textAllCaps="true"
            android:textColor="@color/darkred"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/cvChannel_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/cvChannel_logo" />

        <View
            android:id="@+id/divider_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray1"
            app:layout_constraintTop_toBottomOf="@id/cvChannel_logo" />

        <TextView
            android:id="@+id/comments_count_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/comments"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_2" />

        <TextView
            android:id="@+id/comments_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:text="10K"
            app:layout_constraintStart_toEndOf="@id/comments_count_label"
            app:layout_constraintTop_toBottomOf="@id/divider_2" />

        <ImageView
            android:id="@+id/comments_expand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_comments_expands"
            app:layout_constraintBottom_toBottomOf="@id/comments_count_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/comments_count_label" />

        <View
            android:id="@+id/divider_3"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:background="@color/gray1"
            app:layout_constraintTop_toBottomOf="@id/comments_count_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>